# iracing.rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  iracing-replay.grammar  sample.yaml  session.txt
.doc/: iRacing Telemetry
.github/workflows/: build.yml
examples/: dump_sample.rs  dump_setup.rs  get_telemetry.rs  view_session.rs
src/: client.rs  lib.rs  replay.rs  session.rs  setups.rs  states.rs  telemetry.rs  track_surface.rs
