[package]
name = "iracing"
version = "0.4.0"
description = "Rust interface for Live Telemetry, Session Data, and Setup Files for iRacing"
authors = ["Leo Adamek <iracing.rs@breakerofthings.tech>"]
repository = "https://github.com/LeoAdamek/iracing.rs"
edition = "2018"
license = "MIT"

[dependencies]
libc = "0.2"
bitflags = "1.2"
winapi = {version = "0.3.8", features = ["std","memoryapi","winnt","errhandlingapi","synchapi","handleapi"] }
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
encoding = "0.2.33"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"