[package]
name = "iracing"
version = "0.5.0"
description = "Rust interface for Live Telemetry, Session Data, and Setup Files for iRacing"
authors = ["Leo Adamek <iracing.rs@breakerofthings.tech>"]
repository = "https://github.com/LeoAdamek/iracing.rs"
edition = "2018"
license = "MIT"

[features]
telemetry = ["winapi"]

[dependencies]
bitflags = "1.2"
chrono = "0.4"
encoding_rs = "0.8"
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
winapi = {version = "0.3.9", features = ["std","memoryapi","winnt","errhandlingapi","synchapi","handleapi"], optional = true }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
